--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.4.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
